--- a/wizard/approve_asset.xml
+++ b/wizard/approve_asset.xml
@@ -5,22 +5,38 @@
             <field name="model">inventory_track.asset_approval</field>
             <field name="arch" type="xml">
                 <form string="Stock Asset">
+                <separator string="Asset Approval Checklist" colspan="2"/>
+                    <group  colspan="8" col="4">
+                        <field name="infra_comp_name" readonly="1"/>  
+                        <field name="Operating_system_Build" readonly="1"/>  
+                        <field name = "Microsoft_office" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "browser" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "Antivirus" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "os_updates" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "user_file" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "guest_account" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "ou" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                          <field name="user_department" readonly="1"/>  
+                        <field name="other_information" readonly="1"/>  
+                    </group>
 
                     <group>
+                         <separator string="Asset Details" colspan="2"/>
                         <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" style="color: #e60911; font-weight: bold;" />   
                         <field name="serial_set" readonly='1' />  
-                        <field name="location_name" readonly='1' />  
-                        
+                        <field name="location_name" readonly='1' />    
                     </group>
+
+           
         
                     <group>
                         <field name="approval_comment"/>   
                     </group>
                     <group>
-                        <field name="approval_date" readonly="1"/>
+                        <field name="approval_date" invisible="1"/>
                     </group>
                     <group>
-                        <field name="approval_by" readonly="1"/>
+                        <field name="approval_by" invisible="1"/>
                     </group>
                     <footer>
                         <button name="approve__asset" string="Approve Deployment" type="object" class="btn btn-outline-primary"/>
