--- a/wizard/infra_reject_deployment.xml
+++ b/wizard/infra_reject_deployment.xml
@@ -5,14 +5,30 @@
             <field name="model">inventory_track.infra_reject_deployment</field>
             <field name="arch" type="xml">
                 <form string="Reject">
+
+                    <separator string="Asset Approval Checklist" colspan="2"/>
+                    <group  col="4">
+                        <field name="infra_comp_name" readonly="1"/>  
+                        <field name="Operating_system_Build" readonly="1"/>  
+                        <field name = "Microsoft_office" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "browser" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "Antivirus" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "os_updates" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "user_file" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "guest_account" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                         <field name = "ou" widget="checkbox"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;" readonly="1"/>
+                          <field name="user_department" readonly="1"/>  
+                        <field name="other_information" readonly="1"/>  
+                    </group>
                     <group>
+                       <separator string="Rejection Comment" colspan="2"/>
                         <field name="infra_reject_comment"/>   
                     </group>
                      <group>
-                        <field name="infra_reject_by" readonly="1"/>   
+                        <field name="infra_reject_by" invisible="1"/>   
                     </group>
                     <group>
-                        <field name="infra_reject_date" readonly="1"/>
+                        <field name="infra_reject_date" invisible="1"/>
                     </group>
                     <footer>
                         <button name="infra_rejected_asset" string="Reject Deployment" type="object" class="btn btn-outline-primary"/>
