--- a/wizard/activate_asset.xml
+++ b/wizard/activate_asset.xml
@@ -18,10 +18,10 @@
                         <field name="activated_comment"/>   
                     </group>
                     <group>
-                        <field name="activated_date" readonly="1"/>
+                        <field name="activated_date" invisible="1"/>
                     </group>
                       <group>
-                        <field name="activated_by" readonly="1"/>
+                        <field name="activated_by" invisible="1"/>
                     </group>
                     <footer>
                         <button name="activate_asset" string="Activate Asset" type="object" class="btn btn-outline-primary"/>
