--- a/wizard/dispatch_asset.xml
+++ b/wizard/dispatch_asset.xml
@@ -4,8 +4,24 @@
             <field name="name">inventory_track.dispatch_asset.form</field>
             <field name="model">inventory_track.dispatch_asset</field>
             <field name="arch" type="xml">
-                <form string="Deploy Asset">
-                
+                <form string="Deployoyment">
+
+                    <separator string="Asset Approval Checklist" colspan="2"/>
+                    <group colspan="8" col="4">
+                       
+                        <field name="infra_comp_name"/>   
+                        <field name="Operating_system_Build"/>   
+                        <field name = "Microsoft_office" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "browser" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "Antivirus" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "os_updates" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "user_file" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "guest_account" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name = "ou" widget="radio"  options="{'horizontal': true}" style="color: #e60911; font-weight: bold;"/>
+                        <field name="user_department"/>   
+                        <field name="other_information"/>   
+                    </group>
+                    <separator string="Asset Deployment Details" colspan="2"/>
                     <group>
                         <field name="courier" options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" />   
                     </group>
