--- a/wizard/initiate_diagnosis.xml
+++ b/wizard/initiate_diagnosis.xml
@@ -9,10 +9,12 @@
                     <group>
                         <field name="tag" readonly='1' options="{'no_quick_create':True,'no_quick_edit':True,'no_open':True}" style="color: #e60911; font-weight: bold;" />   
                         <field name="serial_set" readonly='1' />  
-       
-                 
+
                     </group>
         
+                    <group>
+                        <field name="courier_diagnosis"/>   
+                    </group>
                     <group>
                         <field name="initiate_comment"/>   
                     </group>
